# CUDA-Kernel-Optimization

./: .gitignore  CMakeLists.txt  README.md  elementwise_trace.nsys-rep  generate_figures.py
MNIST in CUDA/: README.md
MNIST-in-CUDA/: README.md  plot_mlp_flow.py  plot_timing.py
MNIST-in-CUDA/src/: plot_mlp_flow.py  plot_timing.py  v1.py  v1_fast.py  v2.py  v3.c  v4.cu  v5.cu  v6.cu  v7.cu  v8.cu
assets/: generate_figures.py
docs/: elementwise_performance.md  performance.md  performance_report.md
figures/: generate_figures.py
kernels/: CMakeLists.txt  plot.py
profiling/: metrics_summary.md  nsight_compute.md  nsight_systems.md
pytorch_extension/: polynomial_cuda.cu
src/SGEMM/: sgemm_v3.cu  sgemm_v4.cu  sgemm_v6.cu  sgemm_v7.cu
src/elementwise/: add.cu  add.cuh
src/reduce/: reduce.cuh  reduce_max.cu  reduce_sum.cu
tests/: test_elementwise.cu  test_reduction.cu  test_sgemm.cu  test_softmax.cu  test_transpose.cu
triton/: READEME.md  requirements.txt  softmax.py  vec_add.py
triton/vec_add.png/: results.html  vec_add_performance.csv
